--- a/k8s/simulator/configmap.yaml
+++ b/k8s/simulator/configmap.yaml
@@ -6,9 +6,9 @@ data:
   env: |
     KafkaReadTopic=route.new-direction
     KafkaProduceTopic=route.new-position
-    KafkaBootstrapServers=pkc-6ojv2.us-west4.gcp.confluent.cloud:9092
+    KafkaBootstrapServers=pkc-419q3.us-east4.gcp.confluent.cloud:9092
     KafkaConsumerGroupId=simulator
     security.protocol="SASL_SSL"
     sasl.mechanisms="PLAIN"
-    sasl.username="VG2RMN6NPZFUGNOG"
-    sasl.password="XjS5REYU6AUnhkcC9c/xsz1Fc8k1jwxy1lqwdOKA+kw9C8RxbvAra0B4SsVEMtP7"
+    sasl.username="NQIRQZ7QRLV4FN7J"
+    sasl.password="S91yyyl5cisbZ1pIcljPkuwhdrTwbOdcFumgkT51YdJC4woXHXNIWH5XXXffiLmn"
